--- a/cv/html/contact.html
+++ b/cv/html/contact.html
@@ -7,73 +7,78 @@
     <link rel="stylesheet" type="text/css" href="../css/contact.css">
 </head>
 <body>
-    <head id="p1">
-        <a href="../index.html">Home</a>
-        <a href="education.html">Education</a>
-        <a href="experience.html">Experience</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact Me</a>
-    </head>
-    <br><br>
-    
-    <section><br>
-        <form method="get">
-            <h1>Fill Out the Form to Get in Touch</h1>
+    <div class="content">
+        <br>
+        <header id="p1">
+            <a href="../index.html">Home</a>
+            <a href="education.html">Education</a>
+            <a href="experience.html">Experience</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html" id="ery">Contact Me</a>
+        </header>
+        <br><br>
+        
+        <section><br>
+            <form method="get">
+                <h1>Fill Out the Form to Get in Touch</h1>
 
-            <div class="form_middle">
-            <label>Firstname:</label>
-            <input type="text" name="fname" required><br><br>
-            </div>
-
-            <div class="form_middle">
-            <label>Lastname:</label>
-            <input type="text" name="lname" required><br><br>
-            </div>
-
-            <div class="form_middle">
-            <label>Email:</label>
-            <input type="email" name="email" required><br><br>
-            </div>
-
-            <div class="form_middle">
-            <label>Reason For Contacting</label>
-            <input type="radio" name="reason" required>Project
-            <input type="radio" name="reason">Thesis
-            <input type="radio" name="reason">Meet and Greet<br><br>
-            </div>
-
-            <div class="form_middle">
-                <label>Select the services you need</label>
-                <div>
-                <input type="checkbox" name="app" required>Mobile Application Development<br>
-                <input type="checkbox" name="web">Web Application Development<br>
-                <input type="checkbox" name="graphics">OpenGL or Graphics Programming<br><br>
+                <div class="form_middle">
+                <label>Firstname:</label>
+                <input type="text" name="fname" required><br><br>
                 </div>
-            </div>
 
-            <div class="form_middle">
-            <label>Hire me<br></label>
-            <input type="radio" name="hire">Yes
-            <input type="radio" name="hire">No<br><br>
-            </div>
+                <div class="form_middle">
+                <label>Lastname:</label>
+                <input type="text" name="lname" required><br><br>
+                </div>
 
-            <div class="form_middle">
-            <label>Your Position in Your Company<br></label>
-            <input type="radio" name="pos">CEO
-            <input type="radio" name="pos">HR
-            <input type="radio" name="pos">Person of Interest<br><br>
-            </div>
+                <div class="form_middle">
+                <label>Email:</label>
+                <input type="email" name="email" required><br><br>
+                </div>
 
-            <input type="submit" value="Submit" class="sub">
-        </form><br>
-    </section>
+                <div class="form_middle">
+                <label>Reason For Contacting</label>
+                <input type="radio" name="reason" required>Project
+                <input type="radio" name="reason">Thesis
+                <input type="radio" name="reason">Meet and Greet<br><br>
+                </div>
+
+                <div class="form_middle">
+                    <label>Select the services you need</label>
+                    <div>
+                    <input type="checkbox" name="app" required>Mobile Application Development<br>
+                    <input type="checkbox" name="web">Web Application Development<br>
+                    <input type="checkbox" name="graphics">OpenGL or Graphics Programming<br><br>
+                    </div>
+                </div>
+
+                <div class="form_middle">
+                <label>Hire me<br></label>
+                <input type="radio" name="hire">Yes
+                <input type="radio" name="hire">No<br><br>
+                </div>
+
+                <div class="form_middle">
+                <label>Your Position in Your Company<br></label>
+                <input type="radio" name="pos">CEO
+                <input type="radio" name="pos">HR
+                <input type="radio" name="pos">Person of Interest<br><br>
+                </div>
+
+                <input type="submit" value="Submit" class="sub">
+            </form><br>
+        </section>
+    </div>
 
     <footer>
         <ol>
-            <li>copyright 2025</li>
-            <li><a href="https://github.com/Majedul-Islam5">github</a></li>
-            <li><a href="https://www.facebook.com/anas.afsan">facebook</a></li>
+            <li>copyright 2025 by majedul islam</li>
+            <li><a href="https://github.com/Majedul-Islam5"><img src="../image/github.png" height="40" class="foot"></a></li>
+            <li><a href="https://www.facebook.com/anas.afsan"><img src="../image/facebook.webp" height="40" class="foot"></a></li>
         </ol>
     </footer>
+    <br>
+
 </body>
 </html>
