--- a/cv/html/projects.html
+++ b/cv/html/projects.html
@@ -7,71 +7,81 @@
     <link rel="stylesheet" type="text/css" href="../css/projects.css">
 </head>
 <body>
-    <head id="p1">
-        <a href="../index.html">Home</a>
-        <a href="education.html">Education</a>
-        <a href="experience.html">Experience</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact Me</a>
-    </head>
-    <br><br>
-
-    <section><br>
-        <div>
-            <img src="../image/java.png" alt="java" height="80" class="image">
-            <ol>
-                <li><strong><u>Cafe Shop Management System</u></strong></li>
-                <li><p>A desktop application for managing cafe operations including menu browsing, order placement, billing and inventory tracking, developed using Java Swing.</p></li>
-            </ol>
-        </div>
-
-        <br><br><br>
-        <div>
-            <img src="../image/database.png" alt="sql" height="80" width="115" class="image">
-            <ol>
-                <li><strong><u>Metro Rail Database System</u></strong></li>
-                <li><p>A relational database modeling metro rail operations such as trains, stations, routes, schedules and ticketing, with ER diagrams and SQL queries for effective management.</p></li>
-            </ol>
-        </div>
-
-        <br><br>
-        <div>
-            <img src="../image/csharp.png" alt="cSharp" height="120" class="image"><br>
-            <ol>
-                <li><strong><u>TravelMate: Customized Travel & Package Management System</u></strong></li>
-                <li><p>A multi-role service management system where users can choose or create packages, make payments and manage accounts. Agencies can offer packages and bid, while admins oversee all activities and manage platform content.</p></li>
-            </ol>
-        </div>
-
-        <br><br>
-
-        <div>
-            <img src="../image/soft.png" alt="software" height="90" width="115" class="image">
-            <ol>
-                <li><strong><u>Urban Informal Settlement Data & Infrastructure Advocacy Platform</u></strong></li>
-                <li><p>A digital platform that allows residents of informal settlements in Bangladesh to report infrastructure issues and share socio-economic data in real time via mobile and SMS. It features geotagged reports, dashboards, real-time alerts, surveys and GIS mapping to assist local authorities and NGOs in targeted urban development.</p></li>
-            </ol>
-        </div>
-
-        <br><br><br>
-
-        <div>
-            <img src="../image/open.jpg" alt="opengl" height="90" width="115" class="image">
-            <ol>
-                <li><strong><u>Human Civilization Graphics Project</u></strong></li>
-                <li><p>A graphical representation of human civilization’s evolution across four scenes: early settlements, industrialization, modern urban life and a futuristic world with advanced technology.</p></li>
-            </ol>
-        </div>
-
-
+    <div class="content">
         <br>
-    </section>
+        <header id="p1">
+            <a href="../index.html">Home</a>
+            <a href="education.html">Education</a>
+            <a href="experience.html">Experience</a>
+            <a href="projects.html" id="ery">Projects</a>
+            <a href="contact.html">Contact Me</a>
+        </header>
+        <br><br>
+
+        <section><br>
+            <div>
+                <img src="../image/java.png" alt="java" height="80" class="image">
+                <ol>
+                    <li><strong><u>Cafe Shop Management System</u></strong></li>
+                    <li><p>A desktop application for managing cafe operations including menu browsing, order placement, billing and inventory tracking, developed using Java Swing.</p></li>
+                </ol>
+            </div>
+
+            <br><br>
+            <hr>
+            <br>
+            <div>
+                <img src="../image/database.png" alt="sql" height="80" width="115" class="image">
+                <ol>
+                    <li><strong><u>Metro Rail Database System</u></strong></li>
+                    <li><p>A relational database modeling metro rail operations such as trains, stations, routes, schedules and ticketing, with ER diagrams and SQL queries for effective management.</p></li>
+                </ol>
+            </div>
+
+            <br><br>
+            <hr>
+            <br>
+            <div>
+                <img src="../image/csharp.png" alt="cSharp" height="120" class="image"><br>
+                <ol>
+                    <li><strong><u>TravelMate: Customized Travel & Package Management System</u></strong></li>
+                    <li><p>A multi-role service management system where users can choose or create packages, make payments and manage accounts. Agencies can offer packages and bid, while admins oversee all activities and manage platform content.</p></li>
+                </ol>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div>
+                <img src="../image/soft.png" alt="software" height="90" width="115" class="image">
+                <ol>
+                    <li><strong><u>Urban Informal Settlement Data & Infrastructure Advocacy Platform</u></strong></li>
+                    <li><p>A digital platform that allows residents of informal settlements in Bangladesh to report infrastructure issues and share socio-economic data in real time via mobile and SMS. It features geotagged reports, dashboards, real-time alerts, surveys and GIS mapping to assist local authorities and NGOs in targeted urban development.</p></li>
+                </ol>
+            </div>
+
+            <br><br>
+            <hr>
+            <br>
+
+            <div>
+                <img src="../image/open.jpg" alt="opengl" height="90" width="115" class="image">
+                <ol>
+                    <li><strong><u>Human Civilization Graphics Project</u></strong></li>
+                    <li><p>A graphical representation of human civilization’s evolution across four scenes: early settlements, industrialization, modern urban life and a futuristic world with advanced technology.</p></li>
+                </ol>
+            </div>
+
+            <br>
+        </section>
+    </div>
 
     <footer>
         <ol>
-            <li id="u2">copyright 2025</li>
-            <li id="u2"><a href="https://github.com/Majedul-Islam5">github</a></li>
-            <li id="u2"><a href="https://www.facebook.com/anas.afsan">facebook</a></li>
+            <li id="u2">copyright 2025 by majedul islam</li>
+            <li id="u2"><a href="https://github.com/Majedul-Islam5"><img src="../image/github.png" height="40" class="foot"></a></li>
+            <li id="u2"><a href="https://www.facebook.com/anas.afsan"><img src="../image/facebook.webp" height="40" class="foot"></li>
         </ol>
     </footer>
     
