--- a/cv/html/experience.html
+++ b/cv/html/experience.html
@@ -7,52 +7,61 @@
     <link rel="stylesheet" type="text/css" href="../css/experience.css">
 </head>
 <body>
-    <head id="p1">
-        <a href="../index.html">Home</a>
-        <a href="education.html">Education</a>
-        <a href="experience.html">Experience</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact Me</a>
-    </head>
-    <br><br>
-
-    <section><br>
-
-        <div>
-            <img src="../image/google.png" alt="google" height="80" width="115" class="image">
-            <ol>
-                <li><strong><u>UI/UX Designer</u></strong></li>
-                <li><p>Designed user-centric interfaces for Google Workspace apps, improving usability across platforms.</p></li>
-            </ol>
-        </div>
-
-        <br><br><br>
-        <div>
-            <img src="../image/amazon.png" alt="amazon" height="80" width="115" class="image">
-            <ol>
-                <li><strong><u>Data Analyst</u></strong></li>
-                <li><p>Analyzed large datasets to optimize supply chain logistics and customer recommendations.</p></li>
-            </ol>
-        </div>
-
-        <br><br><br>
-        <div>
-            <img src="../image/microsoft.png" alt="microsoft" height="80" width="115" class="image">
-            <ol>
-                <li><strong><u>Software Engineer</u></strong></li>
-                <li><p>Developed scalable features for cloud-based applications using C# and Azure services.</p></li>
-            </ol>
-        </div>
+    <div class="content">
         <br>
-    </section>
+        <header id="p1">
+            <a href="../index.html">Home</a>
+            <a href="education.html">Education</a>
+            <a href="experience.html" id="ery">Experience</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact Me</a>
+        </header>
+        <br><br>
+
+        <section><br>
+
+            <div>
+                <img src="../image/google.png" alt="google" height="80" width="115" class="image">
+                <ol>
+                    <li><strong><u>UI/UX Designer</u></strong></li>
+                    <li><p>Designed user-centric interfaces for Google Workspace apps, improving usability across platforms.</p></li>
+                </ol>
+            </div>
+
+            <br><br>
+            <hr>
+            <br>
+            <div>
+                <img src="../image/amazon.png" alt="amazon" height="80" width="115" class="image">
+                <ol>
+                    <li><strong><u>Data Analyst</u></strong></li>
+                    <li><p>Analyzed large datasets to optimize supply chain logistics and customer recommendations.</p></li>
+                </ol>
+            </div>
+
+            <br><br>
+            <hr>
+            <br>
+            <div>
+                <img src="../image/microsoft.png" alt="microsoft" height="80" width="115" class="image">
+                <ol>
+                    <li><strong><u>Software Engineer</u></strong></li>
+                    <li><p>Developed scalable features for cloud-based applications using C# and Azure services.</p></li>
+                </ol>
+            </div>
+            <br><br><br>
+        </section>
+        
+    </div>
 
     <footer>
         <ol>
-            <li id="u2">copyright 2025</li>
-            <li id="u2"><a href="https://github.com/Majedul-Islam5">github</a></li>
-            <li><a href="https://www.facebook.com/anas.afsan">facebook</a></li>
+            <li>copyright 2025 by majedul islam</li>
+            <li><a href="https://github.com/Majedul-Islam5"><img src="../image/github.png" height="40" class="foot"></a></li>
+            <li><a href="https://www.facebook.com/anas.afsan"><img src="../image/facebook.webp" height="40" class="foot"></a></li>
         </ol>
     </footer>
+    <br>
     
 </body>
 </html>
