--- a/cv/index.html
+++ b/cv/index.html
@@ -7,32 +7,36 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-    <head id="p1">
-        <a href="index.html">Home</a>
-        <a href="html/education.html">Education</a>
-        <a href="html/experience.html">Experience</a>
-        <a href="html/projects.html">Projects</a>
-        <a href="html/contact.html">Contact Me</a>
-    </head>
-    <br><br>
-
-    <section>
+    <div class="content">
         <br>
-        <img src="https://static.vecteezy.com/system/resources/thumbnails/000/439/863/small/Basic_Ui__28186_29.jpg" height="150" class="image">
+        <header id="p1">
+            <a href="index.html" id="ery">Home</a>
+            <a href="html/education.html">Education</a>
+            <a href="html/experience.html">Experience</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/contact.html">Contact Me</a>
+        </header>
+        <br><br>
 
-        <div class="intro-box">
-            <strong><h1>Majedul Islam</h1></strong>
-            <p>Currently, I am a 9th-semester student at the American International University-Bangladesh (AIUB), pursuing my Bachelor's degree in Computer Science and Engineering. I am particularly interested in areas like machine learning, data science and software engineering. As I approach the final stage of my undergraduate journey, I am actively preparing for higher studies and future career opportunities in the tech industry.</p>
-        </div>
-    </section>
+        <section>
+            <br>
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/000/439/863/small/Basic_Ui__28186_29.jpg" height="150" class="image">
+
+            <div class="intro-box">
+                <strong><h1>Majedul Islam</h1></strong>
+                <p>Currently, I am a 9th-semester student at the American International University-Bangladesh (AIUB), pursuing my Bachelor's degree in Computer Science and Engineering. I am particularly interested in areas like machine learning, data science and software engineering. As I approach the final stage of my undergraduate journey, I am actively preparing for higher studies and future career opportunities in the tech industry.</p>
+            </div>
+        </section>
+    </div>
 
     <footer>
         <ol>
-            <li>copyright 2025</li>
-            <li><a href="https://github.com/Majedul-Islam5">github</a></li>
-            <li><a href="https://www.facebook.com/anas.afsan">facebook</a></li>
+            <li>copyright 2025 by majedul islam</li>
+            <li><a href="https://github.com/Majedul-Islam5"><img src="image/github.png" height="40" class="foot"></a></li>
+            <li><a href="https://www.facebook.com/anas.afsan"><img src="image/facebook.webp" height="40" class="foot"></a></li>
         </ol>
     </footer>
+    <br>
 
     
 </body>
