--- a/cv/html/experience.html
+++ b/cv/html/experience.html
@@ -14,7 +14,7 @@
             <a href="education.html">Education</a>
             <a href="experience.html" id="ery">Experience</a>
             <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.php">Contact Me</a>
         </header>
         <br><br>
 
